Closed Bug 963502 Opened 11 years ago Closed 11 years ago

[MediaEncoder] OMXAudioEncoder will be out of input buffers if input segment is too big.

Categories

(Core :: Audio/Video: Recording, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla29

People

(Reporter: jhlin, Assigned: jhlin)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

OMX encoder has limited input and output buffers. If client keep pushing input without pulling output, input buffers will all be full and dequeuing input buffer will fail.
- Address input buffer exhausting issue when there are too many samples in source segment. If out of input buffer, consume some output buffer to make OMX encoder proceed encoding/release input buffers so we can feed more input data. - Remove an assertion for output buffer size. (Turns out AAC encoder output buffer is not always 768 bytes long).
Attachment #8365765 - Flags: review?(roc)
Update commit message and carry r+ from roc.
Attachment #8365765 - Attachment is obsolete: true
Attachment #8367065 - Flags: review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Component: Video/Audio → Video/Audio: Recording
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: